Improved galary section

--- a/about.html
+++ b/about.html
@@ -61,25 +61,22 @@
 </section>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="header d-flex align-items-center fixed-top">
+  <header id="header" class="header fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
-
-      <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/jr_logo.png" alt="">
-      </a>
-
+      <div class="logo d-flex align-items-center  me-auto me-lg-0">
+          <a href="index.html"><img src="assets/img/jr_logo.png" alt="JR Logo"></a>
+      </div>
     </div>
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-<section id="hero" class="hero d-flex flex-column justify-content-center align-items-center" data-aos="fade" data-aos-delay="200">
+<section id="hero" class="hero d-flex flex-column justify-content-center align-items-center">
   <div class="hero-background"></div>
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-6 text-center">
-        <h2><span>About</span></h2>
-        <p>Me? Why would you wanna know about that?</p>
+        <h2><span>About</span></h2> 
+        <p>Hey, I think I know that guy</p>
       </div>
     </div>
   </div>
@@ -106,21 +103,20 @@
           <div class="col-lg-5 content">
             <h2>Gameplay Programmer</h2>
             <p class="fst-italic py-3">
-              I guess this is the part where I talk about myself. haha
+              The part where I talk about myself.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>look at the address bar</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>I don't feel comfortable sharing my phone number on the internet</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="index.html" class="active btn-get-started">here</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Enschede, Netherlands</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>judah.rosaria@gmail.com</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>High School</span></li>
                   
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Unavailable</span></li>
@@ -144,7 +140,7 @@
               I am an aspiring gameplay programmer. I'm currently studying to become just that through CMGT (Creative Media and Game Technologies) at Saxion.
             </p>
             <p class="m-0">
-              My hobbies include reading books, playing videogames and bouldering. My interests include synthetic music, fantasy, biotech and gameplay mechanics. I've also recently been getting into solar punk as a genre.
+              My hobbies include reading books, playing videogames, making music and bouldering. My interests include synthetic music, fantasy, biotech and gameplay mechanics. I've also recently been getting into solar punk as a genre.
             </p>
           </div>
         </div>
