--- a/index.html
+++ b/index.html
@@ -24,13 +24,26 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
+<!-- Isotope JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js"></script>
+
+<!-- AOS JS -->
+<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+
+<!-- Isotope library -->
+<script src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script>
+
+<!-- AOS library -->
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: PhotoFolio
-  * Updated: May 30 2023 with Bootstrap v5.3.0
-  * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/
+  * Template Name: PhotoFolio, MyPortfolio
+  * Updated: May 30 2023 with Bootstrap v5.3.0, Mar 17 2024 with Bootstrap v5.3.3
+  * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/, https://bootstrapmade.com/myportfolio-bootstrap-portfolio-website-template/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
@@ -60,14 +73,8 @@
 </section>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="container-fluid d-flex align-items-center justify-content-between">
-        <div class=></div>
-      <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
-        <img src="assets/img/jr_logo.png" alt="JR Logo">
-      </a>
-
-    </div>
+  <header id="header" class="header fixed-top">
+   <a href="index.html"><img src="assets/img/jr_logo.png" alt="JR Logo" class="triangle-logo"></a>
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
@@ -93,65 +100,47 @@
   </nav><!-- .navbar -->
 </section><!-- End Hero Section -->
 
-  <main id="main" data-aos="fade" data-aos-delay="1000">
+  <main id="main" data-aos="fade">
 
-<!-- ======= Gallery Section ======= -->
-      <h1 style="text-align: center">Featured Projects</h1>
-      
-<section id="gallery" class="gallery" style="width: 80%; margin: 0 auto;">
-  <div class="container-fluid">
-
-    <div class="row gy-4 justify-content-center">
-      <div class="col-lg-6 col-md-6">
-        <div class="gallery-item h-100">
-          <div class="img-container">
-            <img src="assets/img/projects/ruimte_rommel/ruimte_rommel_logo.png" class="img-fluid" alt="">
+    <section class="section site-portfolio">
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
+            <h2>Featured Projects</h2>
           </div>
-          <div class="gallery-links d-flex align-items-center justify-content-center">
-            <a href="assets/img/projects/ruimte_rommel/ruimte_rommel_logo.png" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-            <a href="project-ruimte_rommel.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+          <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up">
+            <div id="filters" class="filters">
+              <a href="#" data-filter="*" class="active">All</a>
+              <a href="#" data-filter=".programming">Programming</a>
+              <a href="#" data-filter=".music">Music</a>
+              <a href="#" data-filter=".models">Models</a>
+            </div>
           </div>
         </div>
-      </div><!-- End Gallery Item -->
-      <div class="col-lg-6 col-md-6">
-        <div class="gallery-item h-100">
-          <div class="img-container">
-            <img src="assets/img/projects/pantheon_crush/pantheon_crush_menu.png" class="img-fluid" alt="">
+        <div id="portfolio-grid" class="row">
+          <div class="item programming col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="project-ruimte_rommel.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Ruimte Rommel</h3>
+                <span>Programming</span>
+              </div>
+              <img class="img-fluid" src="assets/img/projects/ruimte_rommel/ruimte_rommel_logo.png">
+            </a>
           </div>
-          <div class="gallery-links d-flex align-items-center justify-content-center">
-            <a href="assets/img/projects/pantheon_crush/pantheon_crush_menu.png" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-            <a href="project-pantheon-crush.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+          <div class="item programming col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="project-pantheon-crush.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Pantheon Crush</h3>
+                <span>Programming</span>
+              </div>
+              <img class="img-fluid" src="assets/img/projects/pantheon_crush/pantheon_crush_menu.png">
+            </a>
           </div>
+          <!-- More project items -->
         </div>
-      </div><!-- End Gallery Item -->
-      <!-- <div class="col-lg-6 col-md-6">
-        <div class="gallery-item h-100">
-          <div class="img-container">
-            <img src="assets/img/gallery/gallery-3.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="gallery-links d-flex align-items-center justify-content-center">
-            <a href="assets/img/gallery/gallery-3.jpg" title="Gallery 3" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-            <a href="project-x.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-          </div>
-        </div>
-      </div><!-- End Gallery Item -->
-      <!-- <div class="col-lg-6 col-md-6">
-        <div class="gallery-item h-100">
-          <div class="img-container">
-            <img src="assets/img/gallery/gallery-4.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="gallery-links d-flex align-items-center justify-content-center">
-            <a href="assets/img/gallery/gallery-4.jpg" title="Gallery 4" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-            <a href="project-x.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-          </div>
-        </div>
-      </div><!-- End Gallery Item -->
+      </div>
+    </section>
 
-    </div>
-
-  </div>
-</section><!-- End Gallery Section -->
-  
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
@@ -164,7 +153,7 @@
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/, https://bootstrapmade.com/buy/?theme=MyPortfolio -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
