--- a/contact.html
+++ b/contact.html
@@ -60,14 +60,11 @@
 </section>
     
   <!-- ======= Header ======= -->
-  <header id="header" class="header d-flex align-items-center fixed-top">
+  <header id="header" class="header fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
-
-      <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/jr_logo.png" alt="">
-      </a>
-
+      <div class="logo d-flex align-items-center  me-auto me-lg-0">
+          <a href="index.html"><img src="assets/img/jr_logo.png" alt="JR Logo"></a>
+      </div>
     </div>
   </header><!-- End Header -->
 
@@ -125,7 +122,7 @@
               <i class="bi bi-phone flex-shrink-0"></i>
               <div>
                 <h4>Call:</h4>
-                <p>do not call me.</p>
+                <p>do not call me. 😠</p>
               </div>
             </div>
           </div><!-- End Info Item -->
