--- a/project-pantheon-crush.html
+++ b/project-pantheon-crush.html
@@ -60,19 +60,16 @@
 </section>
     
   <!-- ======= Header ======= -->
-  <header id="header" class="header d-flex align-items-center fixed-top">
+  <header id="header" class="header fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
-
-      <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/jr_logo.png" alt="">
-      </a>
-
+      <div class="logo d-flex align-items-center  me-auto me-lg-0">
+          <a href="index.html"><img src="assets/img/jr_logo.png" alt="JR Logo"></a>
+      </div>
     </div>
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-<section id="hero" class="hero d-flex flex-column justify-content-center align-items-center" data-aos="fade" data-aos-delay="200">
+<section id="hero" class="hero d-flex flex-column justify-content-center align-items-center" data-aos="fade">
   <div class="hero-background"></div>
   <div class="container">
     <div class="row justify-content-center">
@@ -99,7 +96,7 @@
       <div class="container">
 
         <div class="position-relative h-100">
-          <div class="slides-1 portfolio-details-slider swiper">
+          <div class="slides-1 portfolio-details-slider swiper" style="width: 40%;">
             <div class="swiper-wrapper align-items-center">
 
               <div class="swiper-slide">
@@ -132,7 +129,7 @@
 
               <h4>Synopsis:</h4>
               <p>
-                1 v 3. As the Overlord drop rocks on your cowaring subjects for your own amusement. As the cowaring subjects it seems that your GREAT Overlord is bored again and has called you to the arena. Try to avoid being squashed before he moves on to some other form of "entertainment".
+                1 v 3. As the Overlord drop rocks on your cowering subjects for your own amusement. As the cowering subjects it seems that your GREAT Overlord is bored again and has called you to the arena. Try to avoid being squashed before he moves on to some other form of "entertainment".
               </p>
 
             </div>
