--- a/project-ruimte_rommel.html
+++ b/project-ruimte_rommel.html
@@ -60,19 +60,16 @@
 </section>
     
   <!-- ======= Header ======= -->
-  <header id="header" class="header d-flex align-items-center fixed-top">
+  <header id="header" class="header fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
-
-      <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/jr_logo.png" alt="">
-      </a>
-
+      <div class="logo d-flex align-items-center  me-auto me-lg-0">
+          <a href="index.html"><img src="assets/img/jr_logo.png" alt="JR Logo"></a>
+      </div>
     </div>
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-<section id="hero" class="hero d-flex flex-column justify-content-center align-items-center" data-aos="fade" data-aos-delay="200">
+<section id="hero" class="hero d-flex flex-column justify-content-center align-items-center" data-aos="fade">
   <div class="hero-background"></div>
   <div class="container">
     <div class="row justify-content-center">
@@ -98,7 +95,7 @@
     <section id="gallery-single" class="gallery-single">
       <div class="container">
         <div class="position-relative h-100">
-          <div class="slides-1 portfolio-details-slider swiper">
+          <div class="slides-1 portfolio-details-slider swiper" style="width: 40%;">
             <div class="swiper-wrapper align-items-center">
 
               <div class="swiper-slide">
