--- a/project-x.html
+++ b/project-x.html
@@ -60,14 +60,11 @@
 </section>
     
   <!-- ======= Header ======= -->
-  <header id="header" class="header d-flex align-items-center fixed-top">
+  <header id="header" class="header fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
-
-      <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/jr_logo.png" alt="">
-      </a>
-
+      <div class="logo d-flex align-items-center  me-auto me-lg-0">
+          <a href="index.html"><img src="assets/img/jr_logo.png" alt="JR Logo"></a>
+      </div>
     </div>
   </header><!-- End Header -->
 
@@ -99,7 +96,7 @@
       <div class="container">
 
         <div class="position-relative h-100">
-          <div class="slides-1 portfolio-details-slider swiper">
+          <div class="slides-1 portfolio-details-slider swiper" data-autoplay="false" style="width: 40%;">
             <div class="swiper-wrapper align-items-center">
 
               <div class="swiper-slide">
