--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
               <i class="bi bi-phone flex-shrink-0"></i>
               <div>
                 <h4>Call:</h4>
-                <p>do not call me. 😠</p>
+                <p>do not call me😐</p>
               </div>
             </div>
           </div><!-- End Info Item -->
