--- a/about.html
+++ b/about.html
@@ -168,7 +168,7 @@
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <div id="preloader">
+  <!--div id="preloader">
     <div class="line"></div>
   </div>
 
