--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-<section id="hero" class="hero d-flex flex-column justify-content-center align-items-center" data-aos="fade" data-aos-delay="200">
+<section id="hero" class="hero d-flex flex-column justify-content-center align-items-center">
   <div class="hero-background"></div>
   <div class="container">
     <div class="row justify-content-center">
@@ -181,7 +181,7 @@
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <div id="preloader">
+  <!--div id="preloader">
     <div class="line"></div>
   </div>
 
