--- a/about.html
+++ b/about.html
@@ -136,9 +136,11 @@
             </div>
             <p class="py-3">
               I am an aspiring gameplay programmer. I'm currently studying to become just that through CMGT (Creative Media and Game Technologies) at Saxion.
+              
             </p>
             <p class="m-0">
-              My hobbies include reading books, playing videogames, making music and bouldering. My interests include synthetic music, fantasy, biotech and gameplay mechanics. I've also recently been getting into solar punk as a genre.
+              My hobbies include reading books, playing videogames, making music and bouldering. My interests include synthetic music, fantasy, biotech and gameplay mechanics.
+              More into Solarpunk than Cyberpunk
             </p>
           </div>
         </div>
