--- a/index.html
+++ b/index.html
@@ -71,12 +71,14 @@
         </div>
     </section>
 
-    <!-- ======= Header ======= -->
-    <header id="header" class="header fixed-top">
-        <div class="non-interactive">
-            <a href="index.html"><img src="assets/img/jr_logo.png" alt="JR Logo" class="triangle-logo"></a>
-        </div>
-    </header><!-- End Header -->
+  <!-- ======= Header ======= -->
+  <header id="header" class="header fixed-top">
+    <div class="container-fluid d-flex align-items-center justify-content-between">
+      <div class="logo d-flex align-items-center  me-auto me-lg-0">
+          <a href="index.html"><img src="assets/img/jr_logo.png" alt="JR Logo"></a>
+      </div>
+    </div>
+  </header><!-- End Header -->
 
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="hero d-flex flex-column justify-content-center align-items-center">
