--- a/projects.html
+++ b/projects.html
@@ -159,6 +159,16 @@
                         <caption style="caption-side:bottom">The Dangers Of Driving Under Influence</caption>
                     </a>
                 </div>
+                <div class="item programming col-sm-6 col-md-4 col-lg-4 mb-4">
+                    <a href="project-model_vampy.html.html" class="item-wrap fancybox">
+                        <div class="work-info">
+                            <h3>Vampy</h3>
+                            <span>Models</span>
+                        </div>
+                        <img class="img-fluid" src="assets/img/projects/model_vampy/vampy05front.png.jpg">
+                        <caption style="caption-side:bottom">Vampy, the Dying</caption>
+                    </a>
+                </div>
                 <!-- More project items -->
             </div>
         </div>
