--- a/projects.html
+++ b/projects.html
@@ -160,7 +160,7 @@
                     </a>
                 </div>
                 <div class="item programming col-sm-6 col-md-4 col-lg-4 mb-4">
-                    <a href="project-model_vampy.html.html" class="item-wrap fancybox">
+                    <a href="project-model_vampy.html" class="item-wrap fancybox">
                         <div class="work-info">
                             <h3>Vampy</h3>
                             <span>Models</span>
