projects page vampy image fix

--- a/projects.html
+++ b/projects.html
@@ -165,7 +165,7 @@
                             <h3>Vampy</h3>
                             <span>Models</span>
                         </div>
-                        <img class="img-fluid" src="assets/img/projects/model_vampy/vampy05front.png.jpg">
+                        <img class="img-fluid" src="assets/img/projects/model_vampy/vampy05front.png">
                         <caption style="caption-side:bottom">Vampy, the Dying</caption>
                     </a>
                 </div>
