Minor Project page populated

--- a/project-minor_project.html
+++ b/project-minor_project.html
@@ -9,7 +9,33 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/jr_logo.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>Judah Rosaria Portfolio Site</title>
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+
+  <!-- Favicons -->
+  <link href="assets/img/jr_logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -48,7 +74,7 @@
           <li><a href="index.html#about"><i class="bi bi-person navicon"></i> About</a></li>
           <li><a href="index.html#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
           <li><a href="index.html#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
-          <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+<!--          <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -64,13 +90,13 @@
               <li><a href="#">Dropdown 3</a></li>
               <li><a href="#">Dropdown 4</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="index.html#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
         </ul>
       </nav>
 
       <div class="social-links text-center">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://github.com/jdqh-rosa/" class="github"><i class="bi bi-github"></i></a>
         <a href="https://linkedin.com/in/judah-rosaria-105b8a188/" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
@@ -122,11 +148,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/projects/minor_project/" alt="Portfolio Image" class="img-fluid" loading="lazy">
+                  <img src="assets/img/projects/minor_project/SwordClash.gif" alt="Portfolio Image" class="img-fluid" loading="lazy">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/projects/minor_project/" alt="Portfolio Image" class="img-fluid" loading="lazy">
+                  <img src="assets/img/projects/minor_project/minor_project_ss.png" alt="Portfolio Image" class="img-fluid" loading="lazy">
                 </div>
 
                 <div class="swiper-slide">
@@ -152,14 +178,14 @@
 
           <div class="col-lg-12">
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Project Overview</h2>
+              <h2>Coombat System & Behaviour Tree</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                This was a project I made for my school Minor project that lasted a semester. As part of my learning goals for this project I wanted to create a modular combat system and a behaviour tree that I could use in the games I was making in my free time. The combat system is essentially a finite state machine with each attack being it's own state that can be dynamically added and allows for stringing and buffering attacks. The behaviour tree is my first attempt at behavioural systems for enemy agents and mainly focuses on combat and inter-agent cooperation. 
               </p>
               <p>
-                Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                The specific implementation of the mechanics in this project is for a game concept with twin-stick melee fighting with modular weapons. But the main focus was on implementing the mechanics in a modular fashion that is easy to adapt to other systems.  
               </p>
-
+<!--
               <div class="features mt-4">
                 <h3>Key Features</h3>
                 <div class="row gy-3">
@@ -198,7 +224,7 @@
               </div>
             </div>
           </div>
-
+-->
         </div>
 
       </div>
