--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/jr_logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -48,7 +48,7 @@
           <li><a href="index.html#about"><i class="bi bi-person navicon"></i> About</a></li>
           <li><a href="index.html#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
           <li><a href="index.html#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
-          <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+<!--          <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -64,13 +64,13 @@
               <li><a href="#">Dropdown 3</a></li>
               <li><a href="#">Dropdown 4</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="index.html#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
         </ul>
       </nav>
 
       <div class="social-links text-center">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://github.com/jdqh-rosa/" class="github"><i class="bi bi-github"></i></a>
         <a href="https://linkedin.com/in/judah-rosaria-105b8a188/" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
@@ -100,7 +100,7 @@
               <div class="hero-text">
                 <h1>Jdqh<span class="accent-text">Rosa</span></h1>
                 <h2>Judah Rosaria</h2>
-                <p class="lead"><span class="typed" data-typed-items="Gameplay Programmer, Unity Developer, C# Coder"></span></p>
+                <p class="lead"><span class="typed" data-typed-items="Gameplay Programmer, Unity Developer, C# Scripter"></span></p>
                 <p class="description">Passionate about creating entertaining game mechanics and systems.</p>
 
                 <div class="hero-actions">
@@ -244,6 +244,7 @@
 
     </section><!-- /About Section -->
 
+<script>
     <!-- Stats Section -->
     <section id="stats" class="stats section light-background">
 
@@ -290,6 +291,7 @@
       </div>
 
     </section><!-- /Stats Section -->
+</script>
 
     <!-- Skills Section -->
     <section id="skills" class="skills section">
@@ -297,7 +299,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>   </p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -305,7 +307,7 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="skills-category" data-aos="fade-up" data-aos-delay="200">
-              <h3>Front-end Development</h3>
+              <h3>Scripting</h3>
               <div class="skills-animation">
                 <div class="skill-item">
                   <div class="d-flex justify-content-between align-items-center">
@@ -345,7 +347,7 @@
 
           <div class="col-lg-6">
             <div class="skills-category" data-aos="fade-up" data-aos-delay="300">
-              <h3>Back-end Development</h3>
+              <h3>Development</h3>
               <div class="skills-animation">
                 <div class="skill-item">
                   <div class="d-flex justify-content-between align-items-center">
@@ -357,29 +359,30 @@
                   </div>
                   <div class="skill-tooltip">Several years of experience in Unity app development</div>
                 </div>
-
+<!--
                 <div class="skill-item">
                   <div class="d-flex justify-content-between align-items-center">
-                    <h4>Python</h4>
-                    <span class="skill-percentage">0%</span>
+                    <h4>GoDot</h4>
+                    <span class="skill-percentage">20%</span>
                   </div>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  <div class="skill-tooltip">Python development with Django and data analysis tools</div>
+                  <div class="skill-tooltip"></div>
                 </div>
 
                 <div class="skill-item">
                   <div class="d-flex justify-content-between align-items-center">
-                    <h4>SQL</h4>
-                    <span class="skill-percentage">0%</span>
+                    <h4>Unreal Engine</h4>
+                    <span class="skill-percentage">10%</span>
                   </div>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  <div class="skill-tooltip">Database design, optimization, and complex queries</div>
+                  <div class="skill-tooltip"></div>
                 </div>
               </div>
+                -->
             </div><!-- End Backend Skills -->
           </div>
         </div>
@@ -394,7 +397,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>   </p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -493,6 +496,7 @@
               </div>
 
             <!-- Certifications Section -->
+            <!--
             <div class="resume-section" data-aos="fade-up" data-aos-delay="200">
               <h3><i class="bi bi-award me-2"></i>Certifications</h3>
 
@@ -500,7 +504,7 @@
                 <h4>AWS Certified Solutions Architect - Professional</h4>
                 <h5>2023</h5>
               </div>
-
+-->
             </div>
           </div>
         </div>
@@ -515,7 +519,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>   </p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -527,10 +531,10 @@
               <div class="filters-wrapper" data-aos="fade-right" data-aos-delay="150">
                 <ul class="portfolio-filters isotope-filters">
                   <li data-filter="*" class="filter-active">All Projects</li>
-                  <li data-filter=".filter-programming">Programming</li>
+<!--                  <li data-filter=".filter-programming">Programming</li>
                   <li data-filter=".filter-design"> </li>
                   <li data-filter=".filter-automotive"> </li>
-                  <li data-filter=".filter-nature"> </li>
+                  <li data-filter=".filter-nature"> </li> -->
                 </ul>
               </div>
             </div>
