Updated Minor cover picture
added resume

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
               </div>
 
               <div class="cta-section">
-                <a href="#" class="btn btn-primary">
+                <a href="assets/files/Judah_Rosaria_Resume.pdf" class="btn btn-primary">
                   <i class="bi bi-download"></i>
                   Download Resume
                 </a>
@@ -544,13 +544,13 @@
 
                 <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-programming">
                   <div class="portfolio-wrap">
-                    <img src="assets/img/portfolio/portfolio-portrait-2.webp" class="img-fluid" alt="Portfolio Image" loading="lazy">
+                    <img src="assets/img/projects/minor_project/EnemiesWithGraphs.png" class="img-fluid" alt="Portfolio Image" loading="lazy">
                     <div class="portfolio-info">
                       <div class="content">
                         <span class="category">Programming</span>
                         <h4>Minor Project</h4>
                         <div class="portfolio-links">
-                          <a href="assets/img/portfolio/portfolio-portrait-2.webp" class="glightbox" title="Classic Beauty"><i class="bi bi-plus-lg"></i></a>
+                          <a href="assets/img/projects/minor_project/EnemiesWithGraphs.png" class="glightbox" title="Classic Beauty"><i class="bi bi-plus-lg"></i></a>
                           <a href="project-minor_project.html" title="More Details"><i class="bi bi-arrow-right"></i></a>
                         </div>
                       </div>
